Fix icon spacing on search results page button

--- a/scss/components/_search-bar.scss
+++ b/scss/components/_search-bar.scss
@@ -114,10 +114,7 @@
 
         &--results-page {
             height: ($baseline * 5);
-
-            .icon {
-                margin: 4px 0 -4px 0;
-            }
+            padding-top: ($baseline / 2);
         }
     }
 }
